--- a/wg-tunnel.service
+++ b/wg-tunnel.service
@@ -1,7 +1,9 @@
 [Unit]
 Description=Vérifier et lancer le tunnel WireGuard pbs2rosieres si nécessaire
-After=network.target
-Wants=network.target
+#After=network.target
+#Wants=network.target
+After=network-online.target
+Wants=network-online.target
 
 [Service]
 Type=oneshot
